@@ -297,6 +297,10 @@ G_GNUC_PRETTY_FUNCTION
 G_GNUC_NO_INSTRUMENT
 
 <SUBSECTION>
+G_LIKELY
+G_UNLIKELY
+
+<SUBSECTION>
 G_STRLOC
 
 <SUBSECTION>
