@@ -1,3 +1,9 @@
+2002-11-20  Matthias Clasen  <maclas@gmx.de>
+
+	* glib/tmpl/macros_misc.sgml: Document G_LIKELY, G_UNLIKELY.
+
+	* glib/glib-sections.txt: Add G_LIKELY, G_UNLIKELY.
+
 2002-10-20  Matthias Clasen  <maclas@gmx.de>
 
 	* gobject/Makefile.am (SCANOBJ_FILES): 
